Finished menu on the first page

--- a/index.html
+++ b/index.html
@@ -13,13 +13,7 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
-                <li>Courses
-                    <ul id="meniu">
-                        <li><a href="html/course_html.html">HTML</a></li>
-                        <li><a href="html/course_css.html">CSS</a></li>
-                        <li><a href="html/course_js.html">JavaScript</a></li>
-                    </ul>
-                </li>
+                <li><a href="index.html">Course</a></li>
                 <li><a href="html/qa.html">Q&A</a></li>
                 <li><a href="html/contact.html">Contact</a></li>
             </ul>
@@ -27,9 +21,6 @@
     </header>
     <div class="container" id="body">
         <div>
-            <h1>
-                Bine ati venit!
-            </h1>
             <p>a</p>
         </div>
     </div>
