--- a/html/question.html
+++ b/html/question.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Web Design Course</title>
     <link href="../photo/logo.png" type="image/jpg" rel="shortcut icon">
+    <link href="../css/question.css" type="text/css" rel="stylesheet">
     <link href="../index.css" type="text/css" rel="stylesheet">
-    <script src="../js/index.js" type="text/javascript" ></script>
+    <script src="../js/question.js" type="text/javascript" ></script>
 </head>
 <body background="../photo/background.jpg">
 <header class="container">
@@ -20,7 +21,8 @@
     </nav>
 </header>
 <div class="container" id="body">
-    <h1> </h1>
+    <p id="page-title"> Put your question </p>
+    <input id="intrebare">
 </div>
 <footer class="container">
 </footer>
