Added question input and "put question" button

--- a/html/question.html
+++ b/html/question.html
@@ -22,7 +22,8 @@
 </header>
 <div class="container" id="body">
     <p id="page-title"> Put your question </p>
-    <input id="intrebare">
+    <input id="intrebare"><br>
+    <button id="trimite">Put the question</button>
 </div>
 <footer class="container">
 </footer>
