--- a/html/qa-css.html
+++ b/html/qa-css.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Web Design Course</title>
     <link href="../photo/logo.png" type="image/jpg" rel="shortcut icon">
-    <link href="../css/question.css" type="text/css" rel="stylesheet">
+    <link href="../css/qa-css.css" type="text/css" rel="stylesheet">
     <link href="../index.css" type="text/css" rel="stylesheet">
-    <script src="../js/question.js" type="text/javascript" ></script>
+    <script src="../js/qa-css.js" type="text/javascript" ></script>
 </head>
 <body background="../photo/background.jpg">
 <header class="container">
@@ -21,21 +21,12 @@
     </nav>
 </header>
 <div class="container" id="body">
-    <p id="page-title"> Pune o intrebare </p>
-    <form id="var">
-        <input name="q" type="radio">HTML</input>
-        <input name="q" type="radio">CSS</input>
-        <input name="q" type="radio">JavaScript</input>
-    </form>
-    <div>
-        Intrebarea mea este:
-    </div>
-    <form method="get" id="txt">
-        <textarea id="intrebare" name="intr"></textarea><br>
-    </form>
-    <div id="butoane">
-        <button id="trimite" value="submit">Trimite</button>
-        <button id="renunta">Renunta</button>
+    <br>
+    <button>Pune o intrebare</button>
+    <div id="categorii">
+        <div>HTML</div>
+        <div>CSS</div>
+        <div>JavaScript</div>
     </div>
 </div>
 <footer class="container">
