--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Course</a></li>
-                <li><a href="html/qa.html">Q&A</a></li>
+                <li><a href="html/courses.html">Course</a></li>
+                <li><a href="html/qa-html.html">Q&A</a></li>
                 <li><a href="html/contact.html">Contact</a></li>
             </ul>
         </nav>
