--- a/html/courses.html
+++ b/html/courses.html
@@ -14,7 +14,7 @@
         <ul id="menu">
             <li><a href="../index.html">Home</a></li>
             <li><a href="courses.html">Courses</a></li>
-            <li><a href="qa.html">Q&A</a></li>
+            <li><a href="qa-html.html">Q&A</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
