--- a/html/qa-js.html
+++ b/html/qa-js.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Web Design Course</title>
     <link href="../photo/logo.png" type="image/jpg" rel="shortcut icon">
+    <link href="../css/qa-js.css" type="text/css" rel="stylesheet">
     <link href="../index.css" type="text/css" rel="stylesheet">
-    <script src="../js/index.js" type="text/javascript" ></script>
+    <script src="../js/qa-js.js" type="text/javascript" ></script>
 </head>
 <body background="../photo/background.jpg">
 <header class="container">
@@ -14,13 +15,19 @@
         <ul id="menu">
             <li><a href="../index.html">Home</a></li>
             <li><a href="courses.html">Courses</a></li>
-            <li><a href="qa.html">Q&A</a></li>
+            <li><a href="qa-html.html">Q&A</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
 <div class="container" id="body">
-    <h1>  </h1>
+    <br>
+    <button>Pune o intrebare</button>
+    <div id="categorii">
+        <div>HTML</div>
+        <div>CSS</div>
+        <div>JavaScript</div>
+    </div>
 </div>
 <footer class="container">
 </footer>
