Finished q&a page and courses page

--- a/html/courses.html
+++ b/html/courses.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Web Design Course</title>
     <link href="../photo/logo.png" type="image/jpg" rel="shortcut icon">
+    <link href="../css/courses.css" type="text/css" rel="stylesheet">
     <link href="../index.css" type="text/css" rel="stylesheet">
-    <script src="../js/index.js" type="text/javascript" ></script>
+    <script src="../js/courses.js" type="text/javascript" ></script>
 </head>
 <body background="../photo/background.jpg">
 <header class="container">
@@ -19,6 +20,13 @@
         </ul>
     </nav>
 </header>
+<div class="container" id="body">
+    <br>
+    <ul>
+        <li><a href="https://drive.google.com/open?id=0B_-F6Pd7UvZoeTljU0s5UGpoZ2s"> Descrierea cursului </a></li>
+        <li><a href="https://drive.google.com/open?id=0B_-F6Pd7UvZobTE2WDM3N1ZZakk"> Curs 1 - Introducere </a></li>
+    </ul>
+</div>
 <footer class="container">
 </footer>
 </body>
