--- a/html/qa-html.html
+++ b/html/qa-html.html
@@ -22,11 +22,13 @@
 </header>
 <div class="container" id="body">
     <br>
-    <button>Pune o intrebare</button>
     <div id="categorii">
         <div>HTML</div>
         <div>CSS</div>
         <div>JavaScript</div>
+    </div>
+    <div id="intrebari">
+
     </div>
 </div>
 <footer class="container">
